--- a/portfolio/src/componenets/Projects/Projects.css
+++ b/portfolio/src/componenets/Projects/Projects.css
@@ -33,11 +33,14 @@
   background-color: #111827;
   border-radius: 14px;
   padding: 1.5rem;
-  width: 320px;
+  width: 100%;
+  max-width: 320px;
   box-shadow: 0 0 15px rgba(0, 225, 255, 0.05);
   transition: transform 0.3s;
   cursor: pointer;
+  
 }
+
 
 .project-card:hover {
   transform: translateY(-5px);
