--- a/portfolio/src/componenets/Skills/Skills.css
+++ b/portfolio/src/componenets/Skills/Skills.css
@@ -3,6 +3,7 @@
   color: white;
   padding: 4rem 1rem;
   text-align: center;
+  
 }
 .skills-section {
   padding: 100px 0 200px 0;
@@ -76,6 +77,7 @@
   }
 
   .skills-box {
+    max-width: 100%;
     width: 250px;
   }
 }
